--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
       "type": "Device",
       "interfaces": [
          "OnOff"
+      ],
+      "events": [
+         "OnOff"
       ]
    },
    "devDependencies": {
